# EightQueensPuzzle

./: README.md  eight_queens_puzzle.py  pyproject.toml
